--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,7 @@
             ]
         }
     },
-
+    "remoteUser": "codespace",
     "remoteEnv": {
         "DISPLAY": "localhost:10.0"
     }
