--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,47 +1,27 @@
 {
-    "name": "Container for console development under linux",
     "build": {
-        "dockerfile": "Dockerfile"
+        "dockerfile": "./Dockerfile",
+        "context": "."
     },
-    "runArgs": ["--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"],
-
     "features": {
         "ghcr.io/devcontainers/features/common-utils:2": {
-            "username": "codespace",
-            "userUid": "1000",
-            "userGid": "1000"
+            "installZsh": "true",
+            "username": "vscode",
+			"userUid": "1000",
+			"userGid": "1000",
+            "upgradePackages": "true"
         },
         "ghcr.io/devcontainers/features/git:1": {
             "version": "latest",
             "ppa": "false"
-        },
-        "ghcr.io/devcontainers/features/git-lfs:1": {
-            "version": "latest"
-        },
-        "ghcr.io/devcontainers/features/github-cli:1": {
-            "version": "latest"
-        },
-        "ghcr.io/devcontainers/features/sshd:1": {
-            "version": "latest"
         }
     },
+    // Use 'forwardPorts' to make a list of ports inside the container available locally.
+    // "forwardPorts": [],
 
-    // Configure tool-specific properties.
-    "customizations": {
-        // Configure properties specific to VS Code.
-        "vscode": {
-            // Add the IDs of extensions you want installed when the container is created.
-            "extensions": [
-                "ms-vscode.cpptools-extension-pack",
-                "eamodio.gitlens",
-                "ms-azuretools.vscode-docker",
-                "Github.copilot",
-                "Github.copilot-chat"
-            ]
-        }
-    },
-    "remoteUser": "codespace",
-    "remoteEnv": {
-        "DISPLAY": "localhost:10.0"
-    }
+    // Use 'postCreateCommand' to run commands after the container is created.
+    // "postCreateCommand": "uname -a",
+
+    // Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+    "remoteUser": "vscode"
 }
