--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,15 @@
         "ghcr.io/devcontainers/features/git:1": {
             "version": "latest",
             "ppa": "false"
+        },
+        "ghcr.io/devcontainers/features/git-lfs:1": {
+            "version": "latest"
+        },
+        "ghcr.io/devcontainers/features/github-cli:1": {
+            "version": "latest"
+        },
+        "ghcr.io/devcontainers/features/sshd:1": {
+            "version": "latest"
         }
     },
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -23,5 +32,21 @@
     // "postCreateCommand": "uname -a",
 
     // Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "codespace"
+    "remoteUser": "codespace",
+    "customizations": {
+        // Configure properties specific to VS Code.
+        "vscode": {
+            // Add the IDs of extensions you want installed when the container is created.
+            "extensions": [
+                "ms-vscode.cpptools-extension-pack",
+                "eamodio.gitlens",
+                "ms-azuretools.vscode-docker",
+                "Github.copilot",
+                "Github.copilot-chat"
+            ]
+        }
+    },
+    "remoteEnv": {
+        "DISPLAY": "localhost:10.0"
+    }
 }
