--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,5 +38,6 @@
     },
     "remoteEnv": {
         "DISPLAY": "localhost:10.0"
-    }
+    },
+	"postCreateCommand": ["/bin/sh", "-c", "/bin/sh ./.devcontainer/postCreateCommand.sh >> 2>&1 /var/logs/dcdev.log"]
 }
