--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -18,77 +18,77 @@ COPY first-run-notice.txt /tmp/scripts/
 # [Optional] Uncomment this section to install additional OS packages.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && yes | unminimize 2>&1 \
-    && apt-get -y install --no-install-recommends  libmpfr-dev libmpc-dev gettext libelf-dev build-essential libjpeg-dev libpng-dev cmake libisofs-dev meson ninja-build rake autopoint libgmp3-dev libreadline-dev libcurl4 libcurl4-openssl-dev libarchive-dev libgpgme-dev python3-venv libz-dev \
+    && apt-get -y install --no-install-recommends  \
 #dreamcast
-        #gawk \
-        #patch \
-        #bzip2 \
-        #tar \
-        #make \
-        #libgmp-dev \
-        #libmpfr-dev \
-        #libmpc-dev \
-        #gettext \
-        #wget \
-        #libelf-dev \
-        #texinfo \
-        #bison \
-        #flex \
-        #sed \
-        #git \
-        #build-essential \
-        #diffutils \
-        #curl \
-        #libjpeg-dev \
-        #libpng-dev \
-        #python3 \
-        #pkg-config \
-        #cmake \
-        #libisofs-dev \
-        #meson \
-        #ninja-build \
-        #rake \
+        gawk \
+        patch \
+        bzip2 \
+        tar \
+        make \
+        libgmp-dev \
+        libmpfr-dev \
+        libmpc-dev \
+        gettext \
+        wget \
+        libelf-dev \
+        texinfo \
+        bison \
+        flex \
+        sed \
+        git \
+        build-essential \
+        diffutils \
+        curl \
+        libjpeg-dev \
+        libpng-dev \
+        python3 \
+        pkg-config \
+        cmake \
+        libisofs-dev \
+        meson \
+        ninja-build \
+        rake \
 #ps2 additional
-        #autopoint \
-        #autoconf \
-        #automake \
-        #libgmp3-dev \
+        autopoint \
+        autoconf \
+        automake \
+        libgmp3-dev \
 #psp additional
-        #libusb-1.0-0-dev \
-        #libreadline-dev \
-        #libcurl4 \
-        #libcurl4-openssl-dev \
-        #libssl-dev \
-        #libarchive-dev \
-        #libgpgme-dev \
-        #python3-pip \
-        #python3-venv \
-        #libncurses-dev \
-        #pkg-config \
-        #libtool \
-        #libz-dev \
+        libusb-1.0-0-dev \
+        libreadline-dev \
+        libcurl4 \
+        libcurl4-openssl-dev \
+        libssl-dev \
+        libarchive-dev \
+        libgpgme-dev \
+        python3-pip \
+        python3-venv \
+        libncurses-dev \
+        pkg-config \
+        libtool \
+        libz-dev \
 #orbisdev
-        #findutils \
+        findutils \
 #others
         #git \
         #git-lfs \
-        #unzip \
-        #swig3.0 \
+        unzip \
+        swig3.0 \
         moreutils \
-        #rsync \
-        #zip \
-        #libgdiplus \
-        #jq \
-        #cppcheck \
-        #valgrind \
-        #clang \
-        #lldb \
-        #llvm \
-        #gdb \
-        #python3-dev \
-        #vim \
-        #vim-doc \
-        #xtail \
+        rsync \
+        zip \
+        libgdiplus \
+        jq \
+        cppcheck \
+        valgrind \
+        clang \
+        lldb \
+        llvm \
+        gdb \
+        python3-dev \
+        vim \
+        vim-doc \
+        xtail \
         software-properties-common \
         libsecret-1-dev \
 # x11 for remote graphic gui and raylib for linux
